<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >
    <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF9900"
             android:textSize="30sp"
            android:text="@string/detalles"/>  

	<LinearLayout
	    android:id="@+id/detlayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/fondoletra"
	    android:orientation="vertical" >
  
         	<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		  android:layout_marginTop="20px"
      		  > 
        			 <TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/sonando"
			          android:layout_marginLeft="20px"
			          />
                     <TextView
			          android:id="@+id/detpista"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:layout_marginTop="10px"
      		  > 
        			 <TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/duracion"
			          android:layout_marginLeft="20px"
			          />
                     <TextView
			          android:id="@+id/detduracion"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:layout_marginTop="10px"
      		  > 
        			 <TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/artista"
			          android:layout_marginLeft="20px"/>
                     <TextView
			          android:id="@+id/detartista"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:layout_marginTop="10px"
      		  > 
        			 <TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/album"
			          android:layout_marginLeft="20px"/>
                     <TextView
			          android:id="@+id/detalbum"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:layout_marginTop="10px"
      		  > 
        	<TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/anno"
			          android:layout_marginLeft="20px"/>
                     <TextView
			          android:id="@+id/detanno"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:layout_marginTop="10px"
      		  > 
        			 <TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/track"
			          android:layout_marginLeft="20px"/>
                     <TextView
			          android:id="@+id/dettrack"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			<LinearLayout
       		 android:orientation="horizontal"
       		 android:layout_width="fill_parent"
       		 android:layout_height="wrap_content"
       		 android:layout_marginTop="10px"
       		android:layout_marginBottom="20px"
      		  > 
        			 <TextView
				      android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
			          android:textColor="#0000FF"
			          android:textSize="15sp"
			          android:text="@string/directorio"
			          android:layout_marginLeft="20px"/>
                     <TextView
			          android:id="@+id/detdirectorio"
			          android:layout_width="fill_parent"
			          android:layout_height="wrap_content"
			          android:textColor="#000000"
			          android:text="@string/sinPista"
			          android:layout_marginLeft="5px"/>
			</LinearLayout>
			
			</LinearLayout>
 </LinearLayout>
