<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bibliotecatitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biblioteca"
        android:textColor="#99ff00"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bibliotecatitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/album"
            android:textColor="#FF9900"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bibliotecatitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artista"
            android:textColor="#FF9900"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/artista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/artista" />

        <ImageButton
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/album" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/listaReproduccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:background="@drawable/lista"
            android:gravity="right" />

        <ImageButton
            android:id="@+id/anno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="15px"
            android:background="@drawable/anno" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.37"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bibliotecatitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playlist"
            android:textColor="#FF9900"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bibliotecatitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/anno"
            android:textColor="#FF9900"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>