<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Listadereproduccion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Lista de reproducción"
            android:textColor="#FF0000"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fondoletra"
        android:orientation="vertical" >

        <TextView
            android:layout_width="286dp"
            android:layout_height="89dp"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:layout_marginTop="15px"
            android:text="@string/guardarlista"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextGuardarPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15px"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:text="@string/editTextGuardarPL" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/BotonAceptarPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15px"
            android:layout_marginTop="10px"
            android:background="@drawable/botonaceptar"
            android:text="@string/BotonAceptarPL"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BotonCancelarPL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15px"
            android:layout_marginTop="10px"
            android:background="@drawable/botoncancelar"
            android:text="@string/BotonCancelarPL"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>